<resources>

    <string name="app_name">MovieStage2</string>

    <string name="message_error_no_internet_connection">Please, connect your device to the internet to load data</string>

    <string name="detail_label_trailers">Trailers:</string>
    <string name="detail_label_trailer1">Trailer 1</string>
    <string name="detail_label_trailer2">Trailer 2</string>
    <string name="detail_label_reviews">Reviews:</string>

    <string name="message_failing_to_get_movie_detail">Failing to get movie detail</string>
    <string name="message_cannot_play_video">You must have a browser or app to watch videos on the internet</string>
    <string name="message_movie_added_to_favourites">Successfully added into your Favourites</string>

    <string name="action_popular_movies">Popular</string>
    <string name="action_top_rated_movies">Top Rated</string>
    <string name="action_favourites">Favourites</string>

    <string name="label_detail_activity">DetailActivity</string>

    <string name="content_description_poster">poster image</string>
    <string name="content_description_favourite_ic">Favourite Icon</string>

    <string name="detail_format_user_rating">%1$.01f/10</string>

</resources>
